autogen/prototype/proto/c/src/v1.9/containers/Values.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Values is the basic handle type in this file. Example:
//    // Create a default Values object:
//    Values handle = ValuesDefault();
// Functions involving Values are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_PROTO_V1_9_CONTAINERS_VALUES
#define C_INTERFACE_PROTO_V1_9_CONTAINERS_VALUES

#include "GNDStk.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ValuesClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Values
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ValuesClass *Values;

// --- Const-aware handles.
typedef const struct ValuesClass *const ConstHandle2ConstValues;
typedef       struct ValuesClass *const ConstHandle2Values;
typedef const struct ValuesClass *      Handle2ConstValues;
typedef       struct ValuesClass *      Handle2Values;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstValues
ValuesDefaultConst();

// +++ Create, default
extern_c Handle2Values
ValuesDefault();

// --- Create, general, const
extern_c Handle2ConstValues
ValuesCreateConst(
   const char *const valueType,
   const int start,
   const int length
);

// +++ Create, general
extern_c Handle2Values
ValuesCreate(
   const char *const valueType,
   const int start,
   const int length
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ValuesAssign(ConstHandle2Values self, ConstHandle2ConstValues from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ValuesDelete(ConstHandle2ConstValues self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ValuesRead(ConstHandle2Values self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ValuesWrite(ConstHandle2ConstValues self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ValuesPrint(ConstHandle2ConstValues self);

// +++ Print to standard output, as XML
extern_c int
ValuesPrintXML(ConstHandle2ConstValues self);

// +++ Print to standard output, as JSON
extern_c int
ValuesPrintJSON(ConstHandle2ConstValues self);


// -----------------------------------------------------------------------------
// Data vector
// -----------------------------------------------------------------------------

// ------------------------
// int
// ------------------------

// +++ Clear
extern_c void
ValuesIntsClear(ConstHandle2Values self);

// +++ Get size
extern_c size_t
ValuesIntsSize(ConstHandle2ConstValues self);

// +++ Get value
// +++ By index \in [0,size)
extern_c int
ValuesIntsGet(ConstHandle2ConstValues self, const size_t index);

// +++ Set value
// +++ By index \in [0,size)
extern_c void
ValuesIntsSet(ConstHandle2Values self, const size_t index, const int value);

// --- Get pointer to existing values, const
extern_c const int *
ValuesIntsGetArrayConst(ConstHandle2ConstValues self);

// +++ Get pointer to existing values, non-const
extern_c int *
ValuesIntsGetArray(ConstHandle2Values self);

// +++ Set completely new values and size
extern_c void
ValuesIntsSetArray(ConstHandle2Values self, const int *const values, const size_t size);

// ------------------------
// unsigned
// ------------------------

// +++ Clear
extern_c void
ValuesUnsignedsClear(ConstHandle2Values self);

// +++ Get size
extern_c size_t
ValuesUnsignedsSize(ConstHandle2ConstValues self);

// +++ Get value
// +++ By index \in [0,size)
extern_c unsigned
ValuesUnsignedsGet(ConstHandle2ConstValues self, const size_t index);

// +++ Set value
// +++ By index \in [0,size)
extern_c void
ValuesUnsignedsSet(ConstHandle2Values self, const size_t index, const unsigned value);

// --- Get pointer to existing values, const
extern_c const unsigned *
ValuesUnsignedsGetArrayConst(ConstHandle2ConstValues self);

// +++ Get pointer to existing values, non-const
extern_c unsigned *
ValuesUnsignedsGetArray(ConstHandle2Values self);

// +++ Set completely new values and size
extern_c void
ValuesUnsignedsSetArray(ConstHandle2Values self, const unsigned *const values, const size_t size);

// ------------------------
// float
// ------------------------

// +++ Clear
extern_c void
ValuesFloatsClear(ConstHandle2Values self);

// +++ Get size
extern_c size_t
ValuesFloatsSize(ConstHandle2ConstValues self);

// +++ Get value
// +++ By index \in [0,size)
extern_c float
ValuesFloatsGet(ConstHandle2ConstValues self, const size_t index);

// +++ Set value
// +++ By index \in [0,size)
extern_c void
ValuesFloatsSet(ConstHandle2Values self, const size_t index, const float value);

// --- Get pointer to existing values, const
extern_c const float *
ValuesFloatsGetArrayConst(ConstHandle2ConstValues self);

// +++ Get pointer to existing values, non-const
extern_c float *
ValuesFloatsGetArray(ConstHandle2Values self);

// +++ Set completely new values and size
extern_c void
ValuesFloatsSetArray(ConstHandle2Values self, const float *const values, const size_t size);

// ------------------------
// double
// ------------------------

// +++ Clear
extern_c void
ValuesDoublesClear(ConstHandle2Values self);

// +++ Get size
extern_c size_t
ValuesDoublesSize(ConstHandle2ConstValues self);

// +++ Get value
// +++ By index \in [0,size)
extern_c double
ValuesDoublesGet(ConstHandle2ConstValues self, const size_t index);

// +++ Set value
// +++ By index \in [0,size)
extern_c void
ValuesDoublesSet(ConstHandle2Values self, const size_t index, const double value);

// --- Get pointer to existing values, const
extern_c const double *
ValuesDoublesGetArrayConst(ConstHandle2ConstValues self);

// +++ Get pointer to existing values, non-const
extern_c double *
ValuesDoublesGetArray(ConstHandle2Values self);

// +++ Set completely new values and size
extern_c void
ValuesDoublesSetArray(ConstHandle2Values self, const double *const values, const size_t size);


// -----------------------------------------------------------------------------
// Metadatum: valueType
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ValuesValueTypeHas(ConstHandle2ConstValues self);

// +++ Get
// +++ Returns by value
extern_c const char *
ValuesValueTypeGet(ConstHandle2ConstValues self);

// +++ Set
extern_c void
ValuesValueTypeSet(ConstHandle2Values self, const char *const valueType);


// -----------------------------------------------------------------------------
// Metadatum: start
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ValuesStartHas(ConstHandle2ConstValues self);

// +++ Get
// +++ Returns by value
extern_c int
ValuesStartGet(ConstHandle2ConstValues self);

// +++ Set
extern_c void
ValuesStartSet(ConstHandle2Values self, const int start);


// -----------------------------------------------------------------------------
// Metadatum: length
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ValuesLengthHas(ConstHandle2ConstValues self);

// +++ Get
// +++ Returns by value
extern_c int
ValuesLengthGet(ConstHandle2ConstValues self);

// +++ Set
extern_c void
ValuesLengthSet(ConstHandle2Values self, const int length);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v1.9/containers/Values/src/custom.h"

#undef extern_c
#endif